--- a/segmentation.ipynb
+++ b/segmentation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Segmentation (SegNet by Keras) for gyoza image"
+    "# Segmentation (SegNet by Keras) for gyoza images"
    ]
   },
   {
